= aurelhy News

== aurelhy version 0.1-4

* morocco and mmask datasets are enlarged a little bit to have enough border
  data to calculate landscape descriptors as far as 26km away from extreme
  points inside the Morocco territory
  
* mseadist dataset is added
  
* the aurelhy() object is added. It is the main object to perform the AURELHY
  interpolation, which is done using its predict() method


== aurelhy version 0.1-3

* read.geomat(): the file is now read silently

* Bug correction is write.geomat(): the matrix was transposed

* read.geoshapes(): the function failed when coordinates where named 'X' and 'Y'
  instead of 'x' and 'y'. Also adde the possibility to read the DBF file at
  the same time ('dbf' attribute of the object)
  
* geoshapes objects now have a "dbf" attribute that holds the table of the
  associated DBF file

* It is now possible to supply custom attributes in plot.auremask()


== aurelhy version 0.1-2

* Addition of 'geoshapes' objects + read/write ESRI shapefiles and print(),
  lines() and points() methods for these objects

* Addition of a geoshapes example object (Morocco borders in mbord)

* Addition of an example geomask object (Morocco territory mask in mmask)

* Objects 'dem' are renamed 'geotm' for "georeferenced terrain model" for a more
  homogene naming in comparison with the other geo* objects


== aurelhy version 0.1-1

* There are now three grid objects: 'geomat', 'dem' and 'geomask'.

* More plot type as plot(), contour(), image() and persp() for 'geomat' objects.

* An example DEM object (Morocco with a grid of 1km x 1km roughly) is added.


== aurelhy version 0.1-0

This is the first version on R-forge.